              Always broken.  (-mixtransparency was new in Netpbm 10.56,
              September 2011).

              pnmtojpeg: fix array bounds violation in argument list.  Always
              broken (pnmtojpeg was new to Netpbm in Netpbm 8.2 (March 2000).

              pamcrater: fix incorrect output with non-square image.
              Introduced in Netpbm 10.69 (December 2014).

              libnetpbm: fix bug: pm_system_XXX closes Standard Input if you
              supply a Standard Output accepter but not a Standard Input
              feeder.  Broken since Netpbm 10.40 (September 2007).

              Windows: fix bug: pm_system_lp() and pm_system_vp() fail
              silently instead of with a clear error message in an environment
              that does not provide Unix process management.  Always broken.
              (pm_system_lp and pm_system_vp were new in Netpbm 10.40
              (September 2007), but wouldn't even compile until Netpbm 10.42
              (March 2008)).

              Installnetpbm: Accept globs for directory name responses
              (notably, ~/DIR).

              Build: don't try to build standardppmdfont.c if it already
              exists (so don't require ppmdcfont to exist).  Broken around
              Netpbm 10.35 (2006).

              Build: Define _XOPEN_SOURCE=500 in source files that use M_PI.
              While C libraries in the past have always provided this with
              just _XOPEN_SOURCE=null, it appears that M_PI is actually
              defined by Single Unix Specification 2, aka UNIX98, for which
              you need _XOPEN_SOURCE=500, and Cygwin has changed to enforce
              this.

              Build: document MinGW _XOPEN_SOURCE incompatibility and add
              warning to Configure.

              Debian packaging: fix bug: don't try to include Manweb files, as
              it is no longer packaged by 'make package'.

17.03.28 BJH  Release 10.78.00
